--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "jsonwebtoken": "^9.0.2",
     "pino": "^9.9.4",
     "pino-http": "^10.5.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "zod": "^4.1.5"
   },
   "devDependencies": {
